--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,7 +4,7 @@
 <head>
   <title>LoginApp</title>
   {{!-- <link rel="stylesheet" href="/css/bootstrap.css" /> --}}
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
    <!-- Compiled and minified CSS -->
     {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
