--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,13 +12,13 @@
   <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
 
     <ul class="nav navbar-nav ml-auto">
-      <form class="navbar-form navbar-left" action="/action_page.php">
+      <form class="navbar-form navbar-left" action="/catagery">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search Catagery" name="search">
             {{!-- <input class="form-control" id="myInput" type="text" placeholder="Search.."> --}}
 
           <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button">Search</button>
+              <button class="btn btn-outline-secondary" type="button">Search</button>
           </div>
         </div>
       </form>
