--- a/views/products/catagary.handlebars
+++ b/views/products/catagary.handlebars
@@ -16,11 +16,14 @@
             <div class="caption">
               <h3 class="text-center">{{this.adtitle}}</h3>
               <p class="text-center">{{this.description}}</p>
+              <p class="text-center">{{this.id}}</p>
               <p>
           </a>
           </p>
           <form action="/catagery/{{this.id}}?_method=DELETE" method="POST">
-            <a href="/catagery/edit/{{this.id}}" class="btn btn-dark  mb-2">Edit</a>
+          {{#if user}}
+            {{{editFunction this.user.id ../../user.id this.id}}}
+            {{/if}}
             <a href="/catagery/{{this.id}}" class="btn btn-info  mb-2">See more...</a>
             <input type="hidden" value="DELETE" name="_method">
             <input type="submit" class="btn btn-danger" value="Delete" style="float:right">
