--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -3,14 +3,84 @@
   <!-- Control the column width, and how they should appear on different devices -->
   <div class="row">
     <div class="col-sm-6 col-md-4">
-      <a href="/catagery" style="text-decoration:none; color:black" role="button">
+      <a href="/catagery/browse/Mobile&tv" style="text-decoration:none; color:black" role="button">
       <div class="thumbnail">
-        <img src="https://static.daraz.pk/cms/2018/W1/error/Phones-&-Tablets.png"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCpbcgGqLtZ2Y70pSWmYm-LFfFvzlcNnJlvaBdAEeIupOQQguT"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
       </div>
 
       <div class="caption">
-        <h3 class="text-center">Mobile & TV</h3>
-        <p class="text-center">THis is about Mobile and Phone related Catagory</p>
+        <h3 class="text-center">Mobile & Tablets</h3>
+        <p class="text-center">This catagery is about Mobile and Phone related Catagory</p>
+        <p>
+          </a>
+        </p>
+      </div>
+    </div>
+     <div class="col-sm-6 col-md-4">
+      <a href="/catagery/browse/Clothes" style="text-decoration:none; color:black" role="button">
+      <div class="thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7WdMaWDN9i-bshEQcXAQ_hQAr4956zFaG25223ZIpS0b8HsUkHw"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+      </div>
+
+      <div class="caption">
+        <h3 class="text-center">Clothes</h3>
+        <p class="text-center">This catagery is about clothes related Catagory</p>
+        <p>
+          </a>
+        </p>
+      </div>
+    </div>
+     <div class="col-sm-6 col-md-4">
+      <a href="/catagery/browse/Accessories" style="text-decoration:none; color:black" role="button">
+      <div class="thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7oxDjX_Pg88zngFLXxQ-uHiH87PrLat4_s52SekTLx7GLsu-p"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+      </div>
+
+      <div class="caption">
+        <h3 class="text-center">Accessories</h3>
+        <p class="text-center">This catagery is about accessories  related Catagory</p>
+        <p>
+          </a>
+        </p>
+      </div>
+    </div>
+     <div class="col-sm-6 col-md-4">
+      <a href="/catagery/browse/Beauty&Health" style="text-decoration:none; color:black" role="button">
+      <div class="thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0TsczvcZuO4lbdDALWOAlAYT-Cr7pLrRGL0iq_J1RD8pe8nOu"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+      </div>
+
+      <div class="caption">
+        <h3 class="text-center">Beauty & Health</h3>
+        <p class="text-center">This catagery is about beauty and health related Catagory</p>
+        <p>
+          </a>
+        </p>
+      </div>
+    </div>
+     <div class="col-sm-6 col-md-4">
+      <a href="/catagery/browse/Sports" style="text-decoration:none; color:black" role="button">
+      <div class="thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL7OAH63dZajhkXr8cnTKHb8Y2-Cukw0SboSFv5I5TpF2zokEe"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+      </div>
+
+      <div class="caption">
+        <h3 class="text-center">Sports</h3>
+        <p class="text-center">This catagery is about  sports related Catagory</p>
+        <p>
+          </a>
+        </p>
+      </div>
+    </div>
+     <div class="col-sm-6 col-md-4">
+      <a href="/catagery/browse/Kids" style="text-decoration:none; color:black" role="button">
+      <div class="thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8Rgc5KicQaIYOIilX2qEWYrlcvXAISFlufXdOB-cesJgJycGdLg"  class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+      </div>
+
+      <div class="caption">
+        <h3 class="text-center">Kids</h3>
+        <p class="text-center">This catagery is about kids related Catagory</p>
         <p>
           </a>
         </p>
