--- a/views/products/catagary.handlebars
+++ b/views/products/catagary.handlebars
@@ -6,27 +6,34 @@
   <div class="row">
     {{#each this}}
     <div class="col-sm-6 col-md-4">
+      <style>
+        .card-body a {
+          color: black;
+          margin-left: 7px
+        }
+      </style>
       <div class="card">
         <div class="card-body">
-          <a href="/catagery" style="text-decoration:none; color:black" role="button">
+          {{!-- <a href="/catagery" style="text-decoration:none; color:black" role="button"> --}}
             <div class="thumbnail">
-              <img src={{this.photo}} width="90%" height="150px" class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
+              <img src={{this.photo}} width="100%" height="150px" class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
             </div>
 
             <div class="caption">
               <h3 class="text-center">{{this.adtitle}}</h3>
-              <p class="text-center">{{this.description}}</p>
-              <p class="text-center">{{this.id}}</p>
-              <p>
-          </a>
-          </p>
-          <form action="/catagery/{{this.id}}?_method=DELETE" method="POST">
-          {{#if user}}
-            {{{editFunction this.user.id ../../user.id this.id}}}
-            {{/if}}
-            <a href="/catagery/{{this.id}}" class="btn btn-info  mb-2">See more...</a>
-            <input type="hidden" value="DELETE" name="_method">
-            <input type="submit" class="btn btn-danger" value="Delete" style="float:right">
+              <p class="text-center">{{this.catagery}}</p>
+              <span style="color:orangered" class="text-center">
+                <b> Rs:{{this.price}}</b>
+              </span>
+              <a style="float:right " href="/catagery/{{this.id}}">
+                <i class="fas fa-info-circle fa-lg"></i>
+              </a>
+          {{!-- </a> --}}
+
+          {{#if user}} {{{editFunction this.user.id ../../this.user.id this.id}}} {{/if}} &nbsp
+         <form action="/catagery/{{this.id}}?_method=DELETE" method="POST" style="float:right">            
+            <input type="hidden" value="DELETE" name="_method"> 
+            {{#if user}} {{{deleteFunction this.user.id ../../this.user.id }}} {{/if}}          
           </form>
           </div>
         </div>
