--- a/views/products/editad.handlebars
+++ b/views/products/editad.handlebars
@@ -2,40 +2,55 @@
 <div class="alert alert-danger" role="alert"> {{text}}
 </div>
 {{else}} {{/each}}
-<form action="/catagery/{{product.id}}?_method=PUT" method="POST" enctype="multipart/form-data" >
-<input type="hidden" name "_method" value="PUT">
+<form action="/catagery" method="POST" enctype="multipart/form-data">
   <div class="form-group">
     <label for="exampleInputEmail1">Ad Title</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" value="{{product.adtitle}}" name="adtitle" aria-describedby="emailHelp" placeholder="Ad Title">
-    <small id="emailHelp" class="form-text text-muted">We'll  share  olx your  anyone else.</small>
+    <input type="text" class="form-control" id="exampleInputEmail1"  value="{{product.adtitle}}" name="adtitle" aria-describedby="emailHelp" placeholder="Ad Title">
+    <small id="emailHelp" class="form-text text-muted">We'll share olx your anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Name</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" value="{{product.name}}" name="name" aria-describedby="emailHelp" placeholder="Name">
-    <small id="emailHelp" class="form-text text-muted">We'll never share olx your  anyone else.</small>
+    <input type="text" class="form-control" id="exampleInputEmail1" value={{product.name}} name="name" aria-describedby="emailHelp" placeholder="Name">
+    <small id="emailHelp" class="form-text text-muted">We'll never share olx your anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Cell Number</label>
+    <input type="number" class="form-control" id="exampleInputEmail1" value={{product.phone}} name="phone" aria-describedby="emailHelp" placeholder="Cell...">
+    <small id="emailHelp" class="form-text text-muted">We'll never share olx your anyone else.</small>
   </div>
    <div class="form-group">
-    <label for="exampleInputEmail1">Cell Number</label>
-    <input type="number" class="form-control" id="exampleInputEmail1" value="{{product.phone}}" name="phone" aria-describedby="emailHelp" placeholder="Cell...">
-    <small id="emailHelp" class="form-text text-muted">We'll never share olx your  anyone else.</small>
+    <label for="exampleInputEmail1">Price</label>
+    <input type="number" class="form-control" id="exampleInputEmail1"value={{product.price}} name="price" aria-describedby="emailHelp" placeholder="Price">
+
   </div>
   <div class="form-group">
     <label for="exampleFormControlSelect1"></label>Catagery</label>
-    <select class="form-control"  name="catagery" value="{{product.catagery}}" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
+    <select class="form-control"value={{product.catagery}} name="catagery" id="exampleFormControlSelect1">
+      <option>
+        Mobile&tv
+      </option>
+      <option>
+        Clothes
+      </option>
+      <option>
+        Accessories
+      </option> <option>
+        Beauty&Health
+      </option> <option>
+        Sports
+      </option> <option>
+        Kids
+      </option>
     </select>
+
   </div>
-    <div class="form-group">
+  <div class="form-group">
     <label for="exampleFormControlTextarea1"></label>Description</label>
-    <textarea class="form-control" name="description"  id="exampleFormControlTextarea1" rows="3">{{product.description}}</textarea>
+    <textarea class="form-control" name="description" id="exampleFormControlTextarea1" rows="3">{{product.description}}</textarea>
   </div>
-    <div class="form-group">
+  <div class="form-group">
     <label for="exampleFormControlFile1">Upload Photo</label>
-    <input type="file" class="form-control-file" name="photo" value="{{product.photo}}" id="exampleFormControlFile1">
+    <input type="file" class="form-control-file" name="photo" value={{product.photo}} id="exampleFormControlFile1">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
