--- a/views/products/posting.handlebars
+++ b/views/products/posting.handlebars
@@ -2,7 +2,7 @@
 <div class="alert alert-danger" role="alert"> {{text}}
 </div>
 {{else}} {{/each}}
-<form action="/catagery" method="POST" enctype="multipart/form-data">
+<form action="/api/catagery" method="POST" enctype="multipart/form-data">
   <div class="form-group">
     <label for="exampleInputEmail1">Ad Title</label>
     <input type="text" class="form-control" id="exampleInputEmail1" name="adtitle" aria-describedby="emailHelp" placeholder="Ad Title">
