--- a/views/products/catagary.handlebars
+++ b/views/products/catagary.handlebars
@@ -1,39 +1,63 @@
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 <div class="container">
   <!-- Control the column width, and how they should appear on different devices -->
-
   {{#each product}}
-  <br>
   <div class="row">
     {{#each this}}
     <div class="col-sm-6 col-md-4">
       <style>
+        .card {
+          margin-top: 30px;
+        }
+
         .card-body a {
           color: black;
           margin-left: 7px
         }
+
+        .heart {
+          border: none;
+          margin: 10x;
+          width: 70px;
+          height: 70px;
+          position: absolute;
+          transform: translate(-50%, -50%);
+          background: url(http://imagizer.imageshack.com/img923/4545/XdJDuY.png) no-repeat;
+          cursor: pointer;
+        }
+
+
+
+        .favorited {
+          background-position: -2800px 0;
+        }
       </style>
       <div class="card">
         <div class="card-body">
-          {{!-- <a href="/catagery" style="text-decoration:none; color:black" role="button"> --}}
+          {{!--
+          <a href="/catagery" style="text-decoration:none; color:black" role="button"> --}}
             <div class="thumbnail">
               <img src={{this.photo}} width="100%" height="150px" class="rounded mx-auto d-block" alt="Generic placeholder thumbnail">
             </div>
-
             <div class="caption">
               <h3 class="text-center">{{this.adtitle}}</h3>
               <p class="text-center">{{this.catagery}}</p>
-              <span style="color:orangered" class="text-center">
-                <b> Rs:{{this.price}}</b>
-              </span>
-              <a style="float:right " href="/catagery/{{this.id}}">
+              <form style="display:inline" action="/api/catagery/favorite/add/{{this.id}}" method="POST">
+                <span style="color:orangered;" class="text-center">
+                  <b> Rs:{{this.price}}</b>
+                  <button class={{{getFavorite ../../this.user.favorite this.id}}}></button>
+                </span>
+              </form>
+              <a style="float:right;" href="/catagery/{{this.id}}">
                 <i class="fas fa-info-circle fa-lg"></i>
               </a>
-          {{!-- </a> --}}
-
-          {{#if user}} {{{editFunction this.user.id ../../this.user.id this.id}}} {{/if}} &nbsp
-         <form action="/catagery/{{this.id}}?_method=DELETE" method="POST" style="float:right">            
-            <input type="hidden" value="DELETE" name="_method"> 
-            {{#if user}} {{{deleteFunction this.user.id ../../this.user.id }}} {{/if}}          
+              {{!-- </a> --}} {{!--
+          <a href="/catagery/favorite" <span class="heart">
+            </span>
+          </a> --}} {{!-- // Edit Button --}} {{#if user}} {{{editFunction this.user.id ../../this.user.id this.id}}} {{/if}}
+          &nbsp {{!-- Delete button --}}
+          <form action="/api/catagery/{{this.id}}?_method=DELETE" method="POST" style="float:right">
+            <input type="hidden" value="DELETE" name="_method"> {{#if user}} {{{deleteFunction this.user.id ../../this.user.id }}} {{/if}}
           </form>
           </div>
         </div>
@@ -43,3 +67,49 @@
   </div>
   {{/each}}
 </div>
+<script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
+<script>
+  $(function () {
+
+
+
+    $(".heart").on("click", function (e) {
+      var $this = $(this);
+      e.preventDefault(); // cancel the link itself
+      fetch($this.parents('form').attr('action'), { method: 'POST' }).then(function (data) {
+        console.log(data);
+        $this.toggleClass('favorited');
+      });
+    });
+  });
+
+</script>
+<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase.js"></script>
+ <script>
+    
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyC3eoCPfWdxSlk2kcu1lMqqmYlpVgV17rg",
+    authDomain: "olx-prograsive-web-app.firebaseapp.com",
+    databaseURL: "https://olx-prograsive-web-app.firebaseio.com",
+    projectId: "olx-prograsive-web-app",
+    storageBucket: "olx-prograsive-web-app.appspot.com",
+    messagingSenderId: "354702386957"
+  };
+  firebase.initializeApp(config);
+  const messaging = firebase.messaging();
+
+
+messaging.requestPermission().then(function() {
+    console.log('Notification permission granted.');
+    // TODO(developer): Retrieve an Instance ID token for use with FCM.
+    // ...
+    return messaging.getToken();
+  }).then(function(token){
+    console.log('token');
+    console.log(token);
+  }).catch(function(err) {
+    console.log('Unable to get permission to notify.', err);
+
+  });
+</script>
